# todo

./: .gitignore  TODO.md  mkdocs.yml  pyproject.toml  todo.sqlite3
crates/todo-http/: Cargo.toml
docs/: index.md
docs/reference/: main.md
migrations/: 20251003031643_create_task_table.sql
src/todo/: __main__.py  args.py  commands.py  context.py  logger.py  main.py  pyproject.py  subcommand.py  task.py  verbosity.py
src/todo/commands/: __init__.py  _template.py  add.py  complete.py  delete.py  edit.py  list.py  reopen.py
tests/: __init__.py  test_pyproject.py  test_template.py
